<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/postPageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PostActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:background="#F3F3F3"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/posting_title_page"
                android:textColor="#67A520"
                android:textSize="32sp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/postTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/post_title_label"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp">

            <EditText
                android:id="@+id/titleTextField"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="173dp"
                android:layout_height="51dp"
                android:layout_marginEnd="152dp"
                android:layout_marginRight="152dp"
                android:layout_marginBottom="432dp"
                android:autofillHints="postTitle"
                android:hint="@string/post_title_input"
                android:inputType="text"
                android:textSize="16sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/postCategoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/post_cat_label"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <EditText
                android:id="@+id/categoryTextField"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="180dp"
                android:layout_height="51dp"
                android:layout_marginEnd="152dp"
                android:layout_marginRight="152dp"
                android:layout_marginBottom="432dp"
                android:autofillHints="postCategory"
                android:hint="@string/post_cat_input"
                android:inputType="text"
                android:textSize="16sp" />


        </LinearLayout>

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/post_description_label"
                android:textSize="16sp" />

            <EditText

                android:id="@+id/descriptionTextField"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/post_description_input"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:autofillHints="" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/postButtonParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:gravity="end"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <Button
            android:id="@+id/postButton"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:onClick="postOnButtonClick"
            android:text="@string/post_button_label"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="131dp"
            android:layout_height="38dp"
            android:text="@string/status_label"
            android:textSize="16sp"></TextView>

    </LinearLayout>

</LinearLayout>
