<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/postPageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PostActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="#F3F3F3"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/postTitle"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/post_title_label"
                android:textColor="#67A520"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="149dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/originalPoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/op_label"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp">

                <TextView
                    android:id="@+id/originalPosterField"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="173dp"
                    android:layout_height="51dp"
                    android:layout_marginEnd="152dp"
                    android:layout_marginRight="152dp"
                    android:layout_marginBottom="432dp"
                    android:autofillHints="postTitle"
                    android:textSize="16sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/postCategoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/post_cat_label"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/categoryTextField"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="180dp"
                    android:layout_height="51dp"
                    android:layout_marginEnd="152dp"
                    android:layout_marginRight="152dp"
                    android:layout_marginBottom="432dp"
                    android:autofillHints="postCategory"
                    android:textSize="16sp" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/post_description_label"
                android:textSize="16sp" />

            <TextView

                android:id="@+id/descriptionTextField"
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:ems="10"
                android:gravity="start|top"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/postButtonParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="0sp"
            android:layout_marginRight="0sp"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/del_post"
                android:textSize="22sp" />

            <Button
                android:id="@+id/contactButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_post"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>